# opencheck

./: .env.example  .gitignore  ATTRIBUTIONS.md  CLAUDE.md  LICENSE  Makefile  PR_narrative_summaries.md  README.md  cluster-eval.mjs  docker-compose.yml  opencheck-social-b.html  opencheck-social-opt-a.html  opencheck-social-opt-b.html  opencheck-social-opt-c.html  person-dup-diagnostic.mjs  render.yaml  unilever.json
_to_delete/: analyst-control-plane.bundle  background-check-2-20260722.bundle  background-check-20260722.bundle  background-check-3.bundle  background-check-4.bundle  background-check-5.bundle  background-check-6.bundle  background-check-7.bundle  background-check-8.bundle  background-check-9.bundle  bods-aml-ai-inmemory-api.bundle  collapse-reconciliation-v2.bundle  collapse-reconciliation.bundle  degraded-sources.bundle  feat-rate-limiting.bundle  frontend-rdf.bundle  ftm-bo-and-matching-guards.bundle  ftm-edge-schema-mapping.bundle  lucene-fix-2.bundle  lucene-fix.bundle  opencheck-export-aml-ai.bundle  opencheck-export-gql.bundle  opencheck-export-pr1-pr2.bundle  opencheck-export-update.bundle  phase-81-docs.bundle  (+10 more)
backend/: Dockerfile  pyproject.toml
backend/opencheck/: __init__.py  app.py  bo_access.py  bods_data.py  cache.py  config.py  cross_check.py  dispositions.py  elf.py  ftm.py  http.py  icij_check.py  identifiers.py  licensing.py  matching.py  meip.py  names.py  nz_associations.py  og_image.py  opentender_projection.py  ratelimit.py  reconcile.py  risk.py  securities.py  subsidiaries.py
backend/opencheck/bods/: __init__.py  aml_ai.py  ch_constants.py  ftm.py  gql.py  mapper.py  neo4j.py  psc_natures.py  rdf.py  senzing.py  validator.py
backend/opencheck/data/: eiti_soe_index.sample.json  elf_codes.json  elf_codes_supplement.json  eu_bo_access.json  meip_mne_heads.json
backend/opencheck/mcp/: __init__.py  server.py  shaping.py
backend/opencheck/narrative/: __init__.py  packet.py  prompt.py  summarise.py  validate.py
backend/opencheck/reporting/: __init__.py  diagram.py  html_report.py  markdown_report.py  pdf.py
backend/opencheck/routers/: __init__.py  export.py  health.py  history.py  lookup.py  narrative.py  nz_associations.py  person_check.py  search.py  securities.py  share.py  subsidiaries.py
backend/opencheck/sources/: __init__.py  abr_australia.py  acra_singapore.py  ares.py  ariregister.py  base.py  bce_belgium.py  bods_gleif.py  bods_uk_psc.py  bolagsverket.py  brightquery.py  brreg.py  climatetrace.py  cnpj_brazil.py  companies_house.py  corporations_canada.py  cro.py  cvr_denmark.py  cyprus_drcor.py  eiti.py  eiti_soe.py  everypolitician.py  firmenbuch.py  gleif.py  inpi.py  jar_lithuania.py  krs_poland.py  kvk.py  malta_mbr.py  nz_companies.py  oc_relationships.py  openaleph.py  opencorporates.py  opensanctions.py  opentender.py  prh.py  rpo_slovakia.py  rpvs_slovakia.py  sec_edgar.py  sudreg_croatia.py  (+4 more)
backend/opencheck/sources/schemas/: __init__.py  abr_australia.py  acra_singapore.py  ares.py  bce_belgium.py  bolagsverket.py  brreg.py  companies_house.py  corporations_canada.py  cvr_denmark.py  cyprus_drcor.py  eiti.py  eiti_soe.py  firmenbuch.py  gleif.py  krs_poland.py  kvk.py  opencorporates.py  sec_edgar.py  sudreg_croatia.py  wikirate.py
backend/opencheck/timeline/: __init__.py  ariregister.py  assemble.py  companies_house.py  cvr_denmark.py  gleif.py  model.py  nz_companies.py  service.py
backend/scripts/: audit_bods_connectivity.py  benchmark_bigquery_graph.py  bods_quality_check.py  build_curated_narratives.py  build_demo.py  build_eiti_index.py  build_eiti_soe_index.py  build_elf_codes.py  build_geot_projects.py  build_meip.py  build_opentender.sh  capture_psc_stream.py  check_ftm_edges.py  diagnose_bods_walk.py  diagnose_brightquery.py  eval_gleif_autocompletions.py  eval_name_matching.py  eval_narrative.py  export_neo4j.py  export_rdf_bulk.py  extract_acra.py  extract_ariregister.py  extract_bce.py  extract_bods_subgraphs.py  extract_brightquery.py  extract_cyprus.py  extract_opentender.py  extract_securities.py  gen_slide_html.py  generate_okf.py  generate_okf_viz.py  gleif_autocompletions_queries.json  map_psc_stream.py  parquet_to_sqlite.py  profile_memory.py  rdf_demo_queries.py  revendor_ch_constants.py  revendor_psc_enums.py  seed_demo_fixtures.py  setup_bods_data.py  (+8 more)
backend/scripts/bods_review/: report.json
backend/spikes/splink_er/: .gitignore  README.md  asymmetric.py  build_corpus.py  evaluate.py  hard_positive_test.py  make_label_worksheet.py  make_negatives_worksheet.py  model.json  model_asymmetric.json  real_variant_test.py  reconcile_prototype.py  train_model.py  tune.py
backend/spikes/splink_er/charts/: match_weights.html  waterfalls.html
backend/spikes/splink_er/corpus/: _done_leis.txt  _variant_done.txt  entities.csv  entities.parquet  label_worksheet.csv  negatives_worksheet.csv  tune_results.json  variant_pairs.jsonl
backend/tests/: bods_validation_helpers.py  conftest.py  test_abr_australia.py  test_acra_singapore.py  test_aml_ai_export.py  test_app.py  test_ares.py  test_ariregister.py  test_bo_access.py  test_bods_alternate_names.py  test_bods_bolagsverket.py  test_bods_brightquery.py  test_bods_bulk.py  test_bods_ch_directors.py  test_bods_ch_officer.py  test_bods_climatetrace.py  test_bods_correctness_matrix.py  test_bods_data_override.py  test_bods_date_helpers.py  test_bods_export.py  test_bods_firmenbuch.py  test_bods_fixtures_conformance.py  test_bods_ftm_edges.py  test_bods_gleif_ftm.py  test_bods_graph_integrity.py  test_bods_identifier_schemes.py  test_bods_inpi.py  test_bods_kvk.py  test_bods_libcovebods.py  test_bods_mapper.py  test_bods_multi_source.py  test_bods_opencorporates.py  test_bods_opensanctions.py  test_bods_statement_metadata.py  test_bods_validator.py  test_bods_wikidata.py  test_bods_zefix.py  test_cache_data_root.py  test_cache_first_dispatch.py  test_climatetrace.py  (+84 more)
backend/tests/golden_narrative/: 01_clean_uk.json  02_sanctioned_related_party.json  03_no_psc_gap.json  04_name_matched_sparse.json  05_complex_layers.json  06_source_errored.json
(+218 files in other folders)
