[project]
name = "opencheck"
version = "0.1.0"
description = "OpenCheck — chatbot-style corporate intelligence over open data, mapped to BODS v0.4."
dynamic = ["readme"]
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Stephen Abbott Pugh" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "pycountry>=24.6",
    # OpenAleph Python client — provides a requests-based AlephAPI class useful
    # for write operations (bulk entity ingest, collection management) beyond
    # what our async read adapter covers.
    "openaleph-client>=1.1",
    # DuckDB — used by bods_gleif and bods_uk_psc adapters to query Parquet
    # files downloaded from Open Ownership's BODS bulk-data S3 bucket.
    "duckdb>=1.1",
    # bods-xml — canonical XML serialisation of BODS v0.4 statements.
    # Used by the /export?format=xml endpoint.
    "bods-xml @ git+https://github.com/StephenAbbott/bods-xml.git",
]

[project.optional-dependencies]
bods = [
    # Phase 1+: pulled in when the BODS mapper comes online.
    # "lib-cove-bods",
    # "bods-v04-fixtures",
]
llm = [
    # Phase 2+: intent extraction and narrative phrasing.
    # "anthropic>=0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "mypy>=1.13",
    # Phase 41: lib-cove-bods BODS v0.4 validator (used in test_bods_libcovebods.py)
    "libcovebods>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["opencheck"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
