[project]
name = "opencheck"
version = "0.1.0"
description = "OpenCheck — chatbot-style corporate intelligence over open data, mapped to BODS v0.4."
dynamic = ["readme"]
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Stephen Abbott Pugh" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "pycountry>=24.6",
    # OpenAleph Python client — provides a requests-based AlephAPI class useful
    # for write operations (bulk entity ingest, collection management) beyond
    # what our async read adapter covers.
    "openaleph-client>=1.1",
    # DuckDB — used by bods_gleif and bods_uk_psc adapters to query Parquet
    # files downloaded from Open Ownership's BODS bulk-data S3 bucket.
    "duckdb>=1.1",
    # bods-xml — canonical XML serialisation of BODS v0.4 statements.
    # Used by the /export?format=xml endpoint. Pinned to a commit so an
    # upstream push can't silently change the deployed build.
    "bods-xml @ git+https://github.com/StephenAbbott/bods-xml.git@dc5033c01e50a13ec9b01d12caa1365bc093116a",
    # bods-gql — BODS → BigQuery property-graph projection (CSV node/edge
    # tables, CREATE PROPERTY GRAPH DDL, GQL query generators). Used by the
    # /export?format=gql endpoint. Core install only — the [bigquery] extra
    # (Google Cloud client stack) is deliberately NOT pulled in. Pinned.
    "bods-gql @ git+https://github.com/StephenAbbott/bods-gql.git@362973e0df8b6cca79eecf9be84ef106edc628f3",
    # bods-aml-ai — BODS → Google AML AI input tables (party /
    # party_supplementary_data / account_party_link NDJSON). Used by the
    # /export?format=amlai endpoint via its in-memory transform_statements()
    # API. Pinned.
    "bods-aml-ai @ git+https://github.com/StephenAbbott/bods-aml-ai.git@11d14ca73a1572116fb795e60c4ea1babaff2af8",
    # Anthropic SDK — narrative summaries (opencheck.narrative). The import is
    # lazy, so a missing key simply disables the feature; the package is light.
    "anthropic>=0.39",
    # WeasyPrint — renders the accessible (tagged PDF/UA-1) due-diligence report
    # in opencheck.reporting. Imported lazily; needs Pango at runtime (installed
    # in the Docker image). segno generates the live-check QR code.
    "weasyprint>=60",
    "segno>=1.6",
    # MCP server (in-process, mounted at /mcp) — exposes the lookup pipeline as
    # Model Context Protocol tools for AI agents. Streamable-HTTP transport.
    "mcp>=1.2",
    "slowapi>=0.1.10",
]

[project.optional-dependencies]
bods = [
    # Phase 1+: pulled in when the BODS mapper comes online.
    # "lib-cove-bods",
    # "bods-v04-fixtures",
]
ftm = [
    # Canonical BODS↔FtM conversion for the OpenAleph POST /api/2/match
    # flow (opencheck/ftm.py prefers this and falls back to a built-in
    # minimal converter when absent). An extra rather than a hard dep
    # because followthemoney → pyicu builds from source against ICU
    # headers: the Docker image and CI install g++/libicu-dev/pkg-config
    # and sync with `--extra ftm`; dev environments without ICU still
    # work via the built-in converter (parity-tested).
    "bods-ftm @ git+https://github.com/StephenAbbott/bods-ftm.git",
]
llm = [
    # Phase 2+: intent extraction and narrative phrasing.
    # "anthropic>=0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "mypy>=1.13",
    # Phase 41: lib-cove-bods BODS v0.4 validator (used in test_bods_libcovebods.py)
    "libcovebods>=0.16",
    # HTTP mocking for httpx-based adapters
    "respx>=0.21",
    # BODS v0.4 test fixture pack + the pytest plugin that exposes the
    # auto-parametrized `bods_fixture` fixture (test_bods_fixtures_conformance.py)
    "bods-v04-fixtures>=0.1",
    "pytest-bods-v04-fixtures>=0.1",
    # Inspect the tagged-PDF structure in test_reporting_html.py's render test
    # (Lang / MarkInfo / StructTreeRoot). WeasyPrint itself is a runtime dep.
    "pikepdf>=9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["opencheck"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: opt-in smoke test that hits a real external API (GLEIF, Wikidata) to catch API-shape drift. Skipped unless --run-live (or OPENCHECK_RUN_LIVE=1).",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
